max length validation added in favourites note :)

--- a/src/app/components/shared/favourites-notes-dialog/favourites-notes-dialog.component.html
+++ b/src/app/components/shared/favourites-notes-dialog/favourites-notes-dialog.component.html
@@ -11,6 +11,9 @@
                       #autosize="cdkTextareaAutosize"
                       cdkAutosizeMinRows="1"
                       cdkAutosizeMaxRows="5"></textarea>
+            <mat-error *ngIf='note.invalid && (note.dirty || note.touched)'>
+              მაქსიმუმ 50 სიმბოლო.
+            </mat-error>
           </mat-form-field>
         </div>
       </div>
