--- a/src/app/components/main-page-user/book-details-page/book-details-page.component.html
+++ b/src/app/components/main-page-user/book-details-page/book-details-page.component.html
@@ -27,7 +27,7 @@
   <div class="row" *ngFor="let element of comments">
     <div class="col-8">
       <mat-card>
-        <mat-card-subtitle>ქეთევან დათეშიძე</mat-card-subtitle>
+        <mat-card-subtitle>{{element.userInfo?.fullName}}</mat-card-subtitle>
         <mat-card-content>
           {{element.comment}}
         </mat-card-content>
