--- a/src/app/components/admin-page/admin-page.component.html
+++ b/src/app/components/admin-page/admin-page.component.html
@@ -25,7 +25,7 @@
 
       <ng-container matColumnDef="phoneNumber">
         <th mat-header-cell *matHeaderCellDef> ტელეფონის ნომერი </th>
-        <td mat-cell *matCellDef="let element"> {{element.phoneNum ? element.phoneNum : ''}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.phoneNumber ? element.phoneNumber : ''}} </td>
       </ng-container>
 
       <ng-container matColumnDef="createDate">
@@ -42,6 +42,9 @@
           </div>
         </th>
         <td mat-cell *matCellDef="let element">
+          <button mat-mini-fab class="my-fab padding" type="button" [matTooltip]="'რედაქტირება'" (click)="editReaderUser(element)">
+            <mat-icon>edit</mat-icon>
+          </button>
           <button  mat-mini-fab class="my-fab" type="button" [matTooltip]="'წაშლა'" (click)="deleteReader(element)">
             <mat-icon>delete</mat-icon>
           </button>
@@ -56,9 +59,7 @@
   </mat-tab>
   <mat-tab label="მომხმარებლები">
     <div class="add-button">
-      <button class="add-btn" mat-fab aria-label="ახალი ადმინ მომხმარებლის შექმნა" (click)="createNewUser()">
-        <mat-icon>add</mat-icon>
-      </button>
+
     </div>
     <div class="mat-elevation-z8">
       <table mat-table [dataSource]="usersDataSource">
@@ -85,6 +86,22 @@
         <ng-container matColumnDef="createDate">
           <th mat-header-cell *matHeaderCellDef> შექმნის თარიღი </th>
           <td mat-cell *matCellDef="let element"> {{element.createDate ? element.createDate : ''}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>
+            <button mat-mini-fab aria-label="ახალი ადმინ მომხმარებლის შექმნა" [matTooltip]="'დამატება'" (click)="createNewUser()">
+              <mat-icon>add</mat-icon>
+            </button>
+          </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-mini-fab class="my-fab padding" type="button" [matTooltip]="'რედაქტირება'" (click)="editAdminUser(element)">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-mini-fab class="my-fab padding" type="button" [matTooltip]="'წაშლა'" (click)="deleteAdminUser(element)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="usersDisplayedColumns"></tr>
