--- a/src/app/components/admin-page/create-admin-dialog/create-admin-dialog.component.html
+++ b/src/app/components/admin-page/create-admin-dialog/create-admin-dialog.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h3>ახალი მომხმარებლის შექმნა</h3>
+  <h3>მომხმარებლის შექმნა/რედაქტირება</h3>
   <form [formGroup]="createUserForm" style="width: 100%">
     <mat-form-field appearance="fill">
       <mat-label>მომხმარებლის სახელი</mat-label>
@@ -37,15 +37,15 @@
       <mat-label>მობილური ნომერი</mat-label>
       <input type="text" matInput formControlName="phoneNumber"/>
     </mat-form-field>
-    <mat-form-field *ngIf="!isAdmin" appearance="fill">
+    <mat-form-field *ngIf="!info.isAdmin" appearance="fill">
       <mat-label>მკითხველის ტიპი</mat-label>
-      <mat-select formControlName="readerType">
-        <mat-option value="student">სტუდენტი</mat-option>
-        <mat-option value="student">ლექტორი</mat-option>
-        <mat-option value="student">სხვა</mat-option>
+      <mat-select formControlName="userType">
+        <mat-option value="STUDENT">სტუდენტი</mat-option>
+        <mat-option value="PROFESSOR">ლექტორი</mat-option>
+        <mat-option value="OTHER">სხვა</mat-option>
       </mat-select>
     </mat-form-field>
-    <mat-form-field *ngIf="isAdmin" appearance="fill">
+    <mat-form-field *ngIf="info.isAdmin && info.userInfo === null" appearance="fill">
       <mat-label>პაროლი</mat-label>
       <input [type]="hidePassword ? 'password' : 'text'" matInput formControlName="password" required/>
       <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
@@ -56,7 +56,7 @@
          class="alert alert-danger" style="font-size: 0.8rem;">
       <p> პაროლი სავალდებულოა</p>
     </div>
-    <mat-form-field *ngIf="isAdmin" appearance="fill">
+    <mat-form-field *ngIf="info.isAdmin && info.userInfo === null" appearance="fill">
       <mat-label>გაიმეორეთ პაროლი</mat-label>
       <input [type]="hideRepPassword ? 'password' : 'text'" matInput formControlName="repeatPassword" required/>
       <button mat-icon-button matSuffix (click)="hideRepPassword = !hideRepPassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideRepPassword">
