--- a/src/app/components/admin-page/admin-page.component.html
+++ b/src/app/components/admin-page/admin-page.component.html
@@ -36,9 +36,14 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>
           <div class="d-flex ml-12 child-ml-12">
-            <button  mat-mini-fab type="button" [matTooltip]="'დამატება'" (click)="addReader()">
+            <button  mat-mini-fab type="button" class="padding"  [matTooltip]="'დამატება'" (click)="addReader()">
               <mat-icon>add</mat-icon>
             </button>
+            <a href="http://localhost:8080/api/users/_export" download>
+              <button  mat-mini-fab type="button" [matTooltip]="'ექსპორტი'">
+                <mat-icon>download</mat-icon>
+              </button>
+            </a>
           </div>
         </th>
         <td mat-cell *matCellDef="let element">
