--- a/src/app/components/admin-page/admin-page.component.html
+++ b/src/app/components/admin-page/admin-page.component.html
@@ -40,10 +40,14 @@
               <mat-icon>add</mat-icon>
             </button>
             <a href="http://localhost:8080/api/users/_export" download>
-              <button  mat-mini-fab type="button" [matTooltip]="'ექსპორტი'">
+              <button class="padding" mat-mini-fab type="button" [matTooltip]="'ექსპორტი'">
                 <mat-icon>download</mat-icon>
               </button>
             </a>
+            <button  mat-mini-fab type="button" [matTooltip]="'იმპორტი'" (click)="fileUpload.click()">
+              <mat-icon>upload</mat-icon>
+            </button>
+            <input #fileUpload type="file" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" class="hidden" (change)="onFileChange($event)">
           </div>
         </th>
         <td mat-cell *matCellDef="let element">
