--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,11 +6,11 @@
       Tavisufali universiteti
     </h1>
     <div class="header-right">
-      <a *ngIf="admin$ | async" class="navigation" href="/booking">gacema</a>
-      <a *ngIf="user$ | async" class="navigation" href="/usermainpage">wignebi</a>
-      <a *ngIf="admin$ | async" class="navigation" href="/adminmainpage">wignebi</a>
-      <a *ngIf="user$ | async" class="navigation" href="/userpage">Cemi gverdi</a>
-      <a *ngIf="admin$ | async" class="navigation" href="/adminpage">adminis gverdi</a>
+      <a *ngIf="admin$ | async" class="navigation" [ngClass]="{'active': isActive('/booking')}" href="/booking">gacema</a>
+      <a *ngIf="user$ | async" class="navigation" [ngClass]="{'active': isActive('/usermainpage')}" href="/usermainpage">wignebi</a>
+      <a *ngIf="admin$ | async" class="navigation" [ngClass]="{'active': isActive('/adminmainpage')}" href="/adminmainpage">wignebi</a>
+      <a *ngIf="user$ | async" class="navigation" [ngClass]="{'active': isActive('/userpage')}" href="/userpage">Cemi gverdi</a>
+      <a *ngIf="admin$ | async" class="navigation" [ngClass]="{'active': isActive('/adminpage')}" href="/adminpage">adminis gverdi</a>
       <button *ngIf="(admin$ | async) || (user$ | async)"  mat-mini-fab class="my-fab searchButton" type="button" [matTooltip]="'გასვლა'" (click)="logout()">
         <mat-icon>exit_to_app</mat-icon>
       </button>
