--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -85,6 +85,10 @@ mat-icon {
   background-color: #ffc40c;
 }
 
+.active {
+  background-color: #ffc40c;
+}
+
 
 @media only screen and (max-width: 600px) {
   img {
