--- a/src/app/components/main-page-user/main-page-user.component.html
+++ b/src/app/components/main-page-user/main-page-user.component.html
@@ -17,7 +17,7 @@
         <div class="col">
           <mat-form-field appearance="outline" style="padding-bottom: 2px!important;">
             <mat-label>საგნობრივი რუბრიკა</mat-label>
-            <mat-select formControlName="subjectId">
+            <mat-select formControlName="rubricId">
               <mat-option></mat-option>
               <mat-option *ngFor="let subject of subjects" [value]="subject.id">
                 {{subject.name}}
@@ -74,7 +74,7 @@
         </mat-card-subtitle>
         <mat-card-content>
           <p>{{book.author? book.author.length < 25 ? book.author : book.author.substr(0, 20) + '...' : ''}}</p>
-          <p>რუბრიკა: {{book.rubric?.name}} </p>
+          <p>რუბრიკა: {{book.subject?.name}} </p>
           <p>ენა: {{book.language?.name}} </p>
         </mat-card-content>
         <mat-card-actions>
