--- a/src/app/components/admin-page/admin-page.component.html
+++ b/src/app/components/admin-page/admin-page.component.html
@@ -30,7 +30,7 @@
 
       <ng-container matColumnDef="createDate">
         <th mat-header-cell *matHeaderCellDef> შექმნის თარიღი </th>
-        <td mat-cell *matCellDef="let element"> {{element.createDate ? element.createDate : ''}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.registerDate ? element.registerDate.split('T')[0] : ''}} </td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
@@ -94,7 +94,7 @@
 
         <ng-container matColumnDef="createDate">
           <th mat-header-cell *matHeaderCellDef> შექმნის თარიღი </th>
-          <td mat-cell *matCellDef="let element"> {{element.createDate ? element.createDate : ''}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.registerDate ? element.registerDate.split('T')[0] : ''}} </td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
