reservation filter fixed :)

--- a/src/app/components/header-booking/header-booking.component.html
+++ b/src/app/components/header-booking/header-booking.component.html
@@ -159,6 +159,9 @@
             <button  mat-mini-fab class="my-fab searchButton" type="button" [matTooltip]="'ძენნა'" (click)="findBooksWithSearchParam()">
               <mat-icon>search</mat-icon>
             </button>
+            <button  mat-mini-fab class="my-fab searchButton" type="button" [matTooltip]="'ფილტრის გასუფთავება'" (click)="clearSearch()">
+              <mat-icon>delete</mat-icon>
+            </button>
             <div class="row">
               <div class="col">
                 <h3>gafiltruli wignebi</h3>
