--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header">
-    <a *ngIf="user$ | async" href="/usermainpage"><img src="../../../assets/images/freeuni-transparent.png"></a>
-    <a *ngIf="admin$ | async" href="/adminmainpage"><img src="../../../assets/images/freeuni-transparent.png"></a>
-    <a *ngIf="!isAdminOrUser()" href="/login"> <img src="../../../assets/images/freeuni-transparent.png"> </a>
+    <a *ngIf="user$ | async" href="/usermainpage" class="logo"><img src="../../../assets/images/freeuni-transparent.png"></a>
+    <a *ngIf="admin$ | async" href="/adminmainpage" class="logo"><img src="../../../assets/images/freeuni-transparent.png"></a>
+    <a *ngIf="!isAdminOrUser()" href="/login" class="logo"> <img src="../../../assets/images/freeuni-transparent.png"> </a>
     <h1>
       Tavisufali universiteti
     </h1>
