--- a/src/app/components/main-page-admin/view-book-page/view-book-page.component.html
+++ b/src/app/components/main-page-admin/view-book-page/view-book-page.component.html
@@ -31,12 +31,12 @@
               <input type='text' matInput value="{{data.resourceForm ? data.resourceForm.name : 'არ არის მითითებული'}}" [readonly]="true">
             </mat-form-field>
           </div>
-          <div class="col-sm">
-            <mat-form-field style="width: 100%;" appearance="outline">
-              <mat-label>ფაილი</mat-label>
-              <input type='text' matInput value="{{data.file ? data.file : 'არ არის მითითებული'}}" [readonly]="true">
-            </mat-form-field>
-          </div>
+<!--          <div class="col-sm">-->
+<!--            <mat-form-field style="width: 100%;" appearance="outline">-->
+<!--              <mat-label>ფაილი</mat-label>-->
+<!--              <input type='text' matInput value="" [readonly]="true">-->
+<!--            </mat-form-field>-->
+<!--          </div>-->
           <div class="col-sm">
             <mat-form-field style="width: 100%;" appearance="outline">
               <mat-label>ბმული</mat-label>
