--- a/src/app/components/main-page-user/book-details-page/book-details-page.component.scss
+++ b/src/app/components/main-page-user/book-details-page/book-details-page.component.scss
@@ -42,3 +42,13 @@ img {
   font-family: 'avaza';
   margin-bottom: 10px;
 }
+
+@media (max-width: 800px) {
+  .col-6 {
+    width: 100% !important;
+  }
+
+  .col-8 {
+    max-width: 100%;
+  }
+}
