--- a/src/app/components/main-page-user/main-page-user.component.scss
+++ b/src/app/components/main-page-user/main-page-user.component.scss
@@ -65,4 +65,15 @@ mat-paginator {
   background-color: #ffc87c;
 }
 
+@media (max-width: 800px) {
+  .column {
+    width: 50%;
+  }
+}
+
+@media (max-width: 500px) {
+  .column {
+    width: 100%;
+  }
+}
 
