some fixes in book details

--- a/src/app/components/main-page-user/book-details-page/book-details-page.component.html
+++ b/src/app/components/main-page-user/book-details-page/book-details-page.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-6">
       <img src="{{data?.coverImage? data.coverImage : 'assets/images/noImage.png'}}">
     </div>
-    <div class="col">
+    <div class="col-6">
       <h1 class="commentsLabel">detalebi:</h1>
       <h1>{{data?.title}}</h1>
       <h2>ავტორი: {{data?.author}}</h2>
